<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2007-2008 Esmertec AG.
 * Copyright (C) 2007-2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/pref_sms_storage_title"
                      android:key="pref_key_storage_settings">
<!--
    <Preference android:key="pref_key_mms_clear_history"
                      android:title="@string/pref_mms_clear_search_history_title"
                      android:summary="@string/pref_mms_clear_search_history_summary" />
-->
     <CheckBoxPreference android:defaultValue="false"
                      android:key="pref_key_auto_delete"
                      android:summary="@string/pref_summary_auto_delete"
                      android:title="@string/pref_title_auto_delete" />
    <Preference android:key="pref_key_sms_delete_limit"
                      android:dependency="pref_key_auto_delete"
                      android:persistent="false"
                      android:summary="@string/pref_summary_delete_limit"
                      android:title="@string/pref_title_sms_delete" />
    <Preference android:key="pref_key_mms_delete_limit"
                      android:dependency="pref_key_auto_delete"
                      android:persistent="false"
                      android:summary="@string/pref_summary_delete_limit"
                      android:title="@string/pref_title_mms_delete" />
    <ListPreference android:key="pref_key_sms_store"
                      android:title="@string/pref_title_sms_store"
                      android:defaultValue="1"
                      android:dialogTitle="@string/pref_title_sms_store"
                      android:entries="@array/entries_sms_store" 
                      android:entryValues="@array/entries_sms_store_value"/>
    <ListPreference android:key="pref_key_sms_store_card1"
                      android:title="@string/pref_title_sms_store_card1"
                      android:defaultValue="1"
                      android:dialogTitle="@string/pref_title_sms_store"
                      android:entries="@array/entries_sms_store" 
                      android:entryValues="@array/entries_sms_store_value"/>
    <ListPreference android:key="pref_key_sms_store_card2"
                      android:title="@string/pref_title_sms_store_card2"
                      android:defaultValue="1"
                      android:dialogTitle="@string/pref_title_sms_store"
                      android:entries="@array/entries_sms_store" 
                      android:entryValues="@array/entries_sms_store_value"/>  
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_sms_settings_title"
                      android:key="pref_key_sms_settings" >
    <CheckBoxPreference android:defaultValue="false"
                      android:key="pref_key_sms_delivery_reports"
                      android:summary="@string/pref_summary_sms_delivery_reports"
                      android:title="@string/pref_title_sms_delivery_reports" />
    <Preference android:key="pref_key_manage_sim_messages"
                      android:summary="@string/pref_summary_manage_sim_messages"
                      android:title="@string/pref_title_manage_sim_messages" />
    <EditTextPreference android:key="pref_key_sms_center"
                      android:title="@string/pref_title_sms_center"
                      android:dialogTitle="@string/pref_title_sms_center"
                      android:maxLength="32"
                      android:persistent="false"
                      android:inputType="phone"/>
    <EditTextPreference android:key="pref_key_sms_center_card1"
                      android:title="@string/pref_title_sms_center_card1"
                      android:dialogTitle="@string/pref_title_sms_center"
                      android:maxLength="32"
                      android:persistent="false"
                      android:inputType="phone"/>
    <EditTextPreference android:key="pref_key_sms_center_card2"
                      android:title="@string/pref_title_sms_center_card2"
                      android:dialogTitle="@string/pref_title_sms_center"
                      android:maxLength="32"
                      android:persistent="false"
                      android:inputType="phone"/>
    <CheckBoxPreference android:defaultValue="true"
                      android:key="pref_key_longsms_convert_mms"
                      android:summary="@string/pref_summary_longsms_convert_sms"
                      android:title="@string/pref_title_longsms_convert_sms" />
  <Preference       android:key="pref_key_sms_template"
                      android:title="@string/pref_title_sms_template"
                      android:summary="@string/pref_summary_sms_template">
    </Preference>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_mms_settings_title"
                      android:key="pref_key_mms_settings">
    <CheckBoxPreference android:defaultValue="true"
                      android:key="pref_key_mms_group_mms"
                      android:summary="@string/pref_summary_mms_group_mms"
                      android:title="@string/pref_title_mms_group_mms" />
    <CheckBoxPreference android:defaultValue="false"
                      android:key="pref_key_mms_delivery_reports"
                      android:summary="@string/pref_summary_mms_delivery_reports"
                      android:title="@string/pref_title_mms_delivery_reports" />
    <CheckBoxPreference android:defaultValue="false"
                      android:key="pref_key_mms_read_reports"
                      android:summary="@string/pref_summary_mms_read_reports"
                      android:title="@string/pref_title_mms_read_reports" />
    <CheckBoxPreference android:defaultValue="true"
                      android:key="pref_key_mms_auto_retrieval"
                      android:title="@string/pref_title_mms_auto_retrieval"
                      android:summary="@string/pref_summary_mms_auto_retrieval" />
    <CheckBoxPreference android:layout="?android:attr/preferenceLayoutChild"
                        android:dependency="pref_key_mms_auto_retrieval"
                        android:defaultValue="false"
                        android:key="pref_key_mms_retrieval_during_roaming"
                        android:title="@string/pref_title_mms_retrieval_during_roaming"
                        android:summary="@string/pref_summary_mms_retrieval_during_roaming" />
    <ListPreference android:key="pref_key_mms_expiry"
                      android:title="@string/pref_title_mms_save_time"
                      android:dialogTitle="@string/pref_title_mms_save_time"
                      android:entries="@array/save_time"
                      android:entryValues="@array/save_time_values"
                      android:defaultValue="0"
                      android:summary="@string/save_description"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/pref_notification_settings_title">
    <CheckBoxPreference android:key="pref_key_enable_notifications"
                        android:title="@string/pref_title_notification_enabled"
                        android:defaultValue="true" />
    <RingtonePreference android:key="pref_key_ringtone"
                        android:title="@string/pref_title_notification_ringtone"
                        android:ringtoneType="notification"
                        android:dependency="pref_key_enable_notifications"
                        android:defaultValue="content://settings/system/notification_sound" />
    <CheckBoxPreference android:key="pref_key_vibrate"
                        android:title="@string/pref_title_notification_vibrateWhen"
                        android:dependency="pref_key_enable_notifications"
                        android:defaultValue="false" />
  </PreferenceCategory>
</PreferenceScreen>
