<?xml version="1.0" encoding="UTF-8"?>
<!--
 *
 * Copyright (c) 2013, The Linux Foundation. All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are
 * met:
 *     * Redistributions of source code must retain the above copyright
 *       notice, this list of conditions and the following disclaimer.
 *     * Redistributions in binary form must reproduce the above
 *       copyright notice, this list of conditions and the following
 *       disclaimer in the documentation and/or other materials provided
 *       with the distribution.
 *     * Neither the name of The Linux Foundation nor the names of its
 *       contributors may be used to endorse or promote products derived
 *       from this software without specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED "AS IS" AND ANY EXPRESS OR IMPLIED
 * WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
 * MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT
 * ARE DISCLAIMED.  IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS
 * BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
 * CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
 * SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
 * BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
 * WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
 * OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
 * IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-->

<com.android.mms.ui.VcardAttachmentView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/unsupport_attachment_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/attachment_editor_bg"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingRight="5dip" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dip"
            android:src="@drawable/ic_missing_thumbnail_picture" />

        <TextView
            android:id="@+id/unsupport_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unsupported_content_type" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="8dp" >

        <Button
            android:id="@+id/view_unsupport_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dip"
            android:layout_height="45dip"
            android:text="@string/view"
            android:textColor="@android:color/black"
            android:visibility="gone" />

        <Button
            android:id="@+id/replace_unsupport_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dip"
            android:layout_height="45dip"
            android:text="@string/replace"
            android:textColor="@android:color/black"
            android:visibility="gone" />

        <Button
            android:id="@+id/remove_unsupport_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dip"
            android:layout_height="45dip"
            android:text="@string/remove"
            android:textColor="@android:color/black" />
    </LinearLayout>

</com.android.mms.ui.VcardAttachmentView>
